--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Picture:</b>
-  <%= @idea.picture %>
+  <%= image_tag(@ideas.picture_url, :width => 600) if @idea.picture.present? %>
 </p>
 
 
